// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox field should render disabled input 1`] = `
<FieldTemplate
  description="my checkbox input hint"
  errorMessage="My error message"
  isValid={true}
  type="checkbox"
>
  <label>
    <input
      autoFocus={true}
      checked={true}
      disabled={true}
      id="myForm"
      label="My checkbox title"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="control-label"
      htmlFor="myForm"
    >
      My checkbox title
    </span>
  </label>
</FieldTemplate>
`;

exports[`CheckBox field should render input 1`] = `
<FieldTemplate
  description="my checkbox input hint"
  errorMessage="My error message"
  isValid={true}
  type="checkbox"
>
  <label>
    <input
      autoFocus={true}
      checked={true}
      disabled={undefined}
      id="myForm"
      label="My checkbox title"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="control-label"
      htmlFor="myForm"
    >
      My checkbox title
    </span>
  </label>
</FieldTemplate>
`;
